--- a/css/styles.css
+++ b/css/styles.css
@@ -1618,3 +1618,33 @@ blockquote::before {
         padding: 25px;
     }
 }
+
+.modal {
+    display: none; /* Oculto por defecto */
+    position: fixed; /* Fijo en la pantalla */
+    z-index: 1050; /* Por encima de todo */
+    left: 0;
+    top: 0;
+    width: 100%; /* Ancho completo */
+    height: 100%; /* Alto completo */
+    overflow: auto; /* Desplazamiento si es necesario */
+    background-color: rgba(0, 0, 0, 0.7); /* Fondo semi-transparente */
+}
+
+.modal-dialog {
+    margin: 100px auto; /* Centrado vertical */
+    max-width: 900px; /* Ancho máximo del modal */
+}
+
+.close {
+    background-color: #f76c6c; /* Fondo transparente */
+    border: none; /* Sin borde */
+    color: #ffffff; /* Color del texto */
+    font-size: 20px; /* Tamaño de fuente */
+    cursor: pointer; /* Cursor de puntero al pasar el mouse */
+    transition: color 0.3s; /* Transición suave para el color */
+}
+
+.close:hover {
+    color: #f76c6c; /* Color de texto al pasar el mouse */
+}
